# spraycharles

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Pipfile  README.md  analyze.py  config.ini  list_elements.json  out.csv  out.json  output.csv  passwordpredator.py  passwords  pyproject.toml  requirements-dev.txt  requirements.txt  script.py  spraycharles.py  test  test.csv  users
.github/workflows/: ci.yml
extras/: Dockerfile  list_elements.json
spraycharles/: .spraycharles.py.swp  Dockerfile  __init__.py  __main__.py  analyze.py  spraycharles.py
spraycharles/commands/: __init__.py  analyze.py  gen.py  modules.py  parse.py  spray.py
spraycharles/lib/: analyze.py  logger.py  spraycharles.py
spraycharles/lib/utils/: __init__.py  make_list.py  notify.py  ntlm_challenger.py  smbstatus.py  sprayresult.py
spraycharles/targets/: Adfs.py  Ciscosslvpn.py  Citrix.py  Ntlm.py  Office365.py  Okta.py  Owa.py  Rdg.py  Smb.py  Sonicwall.py  __init__.py
spraycharles/targets/classes/: BaseHttpTarget.py
spraycharles/utils/: make_list.py  ntlm_challenger.py
targets/: .Owa.py.swp  Adfs.py  Cisco.py  Ciscosslvpn.py  Citrix.py  Custom365.py  CustomOffice365.py  Ews.py  Ntlm.py  Office365.py  Okta.py  Openvpn.py  Outlook.py  Owa.py  Remoteaccess.py  Smb.py  Sonicwall.py  __init__.py
targets/classes/: BaseHttpTarget.py
tests/: test_cli.py
utils/: list_elements.json  make_list.py  notify.py  ntlm_challenger.py
