[tool.poetry]
name = "spraycharles"
version = "2.0.0"
description = "Low and slow password spraying tool, designed to spray on an interval over a long period of time."
authors = [
    "Matt Creel",
    "Nicholas A",
]
readme = "README.md"
license = "BSD 3-Clause"
homepage = "https://github.com/Tw1sm/spraycharles"
repository = "https://github.com/Tw1sm/spraycharles"
include = ["LICENSE", "CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.3"
impacket = "^0.9.24"
requests = "^2.27.1"
requests_ntlm = "^1.1.0"
pymsteams = "^0.2.1"
discord-webhook = "^0.15.0"
rich = "^12.0.1"
typer = "^0.12.3"
typer-config = "^1.4.0"

[tool.poetry.dev-dependencies]
numpy = "^1.22.3"
impacket = "^0.9.24"
requests = "^2.27.1"
requests_ntlm = "^1.1.0"
click = "^8.1.2"
click-config-file = "^0.6.0"
notifiers = "^1.3.3"
pymsteams = "^0.2.1"
discord-webhook = "^0.15.0"
rich = "^12.0.1"
pre-commit = "^2.18.1"
isort = "^5.10.1"
black = "^22.3.0"
pytest = "^7.1.1"
pytest-click = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
spraycharles = "spraycharles.__main__:app"
sc = "spraycharles.__main__:app"
